Fixed gallery issue with z-index

--- a/assets/sass/_modules/_primary-nav.scss
+++ b/assets/sass/_modules/_primary-nav.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   width: 100%; /* Full width */
-  z-index: 15;
+  z-index: 10;
 }
 
 .primary-nav {
